--- a/index.html
+++ b/index.html
@@ -5,88 +5,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <title>WebStudio</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio
+    <header class="header">
+        <nav class="header-nav">
+            <a href="./index.html" class="header-logo"><span>Web</span>Studio
             </a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <ul class="header-list">
+                <li><a href="" class="header-item">Studio</a></li>
+                <li><a href="./portfolio.html" class="header-item">Portfolio</a></li>
+                <li><a href="" class="header-item">Contacts</a></li>
             </ul>
         </nav>
 
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="addres">
+            <ul class="address-list">
+                <li class="address-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a> </li>
             </ul>
         </address>
 
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions
                 for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" class="hero-btn">Order Service</button>
         </section>
-        <section>
-            <h2>Main qualities</h2>
-            <ul>
-                <li>
+        <section class="qualities">
+            <h2 class="qualities-title">Main qualities</h2>
+            <ul class="qualities-list">
+                <li class="qualities-item">
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
+                <li class="qualities-item">
                     <h3>Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
-                <li>
+                <li class="qualities-item">
                     <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
-                <li>
+                <li class="qualities-item">
                     <h3>Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li><img src="./images/computer-screen.jpg" alt="computer screen" width="360" height="300" /></li>
-                <li><img src="./images/telephone.jpg" alt="telephone" width="360" height="300" /></li>
-                <li><img src="./images/telephone-laptop.jpg" alt="telephone and laptop" width="360" height="300" />
+        <section class="actions">
+            <h2 class="actions-title">What are we doing</h2>
+            <ul class="actions-list">
+                <li class="actions-item"><img src="./images/computer-screen.jpg" alt="computer screen" width="360"
+                        height="300" /></li>
+                <li class="actions-item"><img src="./images/telephone.jpg" alt="telephone" width="360" height="300" />
+                </li>
+                <li class="actions-item"><img src="./images/telephone-laptop.jpg" alt="telephone and laptop" width="360"
+                        height="300" />
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-item">
                     <img src="./images/img-1.jpg" alt="Photo Mark Guerrero" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img-2.jpg" alt="Photo Tom Ford" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img-3.jpg" alt="Photo Camila Garcia" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img-4.jpg" alt="Photo Daniel Wilson" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
@@ -94,9 +102,11 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
+        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing &
+            growth
+            solutions.</p>
 
     </footer>
 </body>
