--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a href="./index.html" class="header-logo"><span>Web</span>Studio
+            <a href="./index.html" class="header-logo link">Web<span class="studio">Studio</span>
             </a>
-            <ul class="header-list">
-                <li><a href="" class="header-item">Studio</a></li>
-                <li><a href="./portfolio.html" class="header-item">Portfolio</a></li>
-                <li><a href="" class="header-item">Contacts</a></li>
+            <ul class="header-list list">
+                <li class="header-item link"><a href="./index.html">Studio</a></li>
+                <li class="header-item link"><a href="./portfolio.html">Portfolio</a></li>
+                <li class="header-item link"><a href="">Contacts</a></li>
             </ul>
         </nav>
 
-        <address class="addres">
+        <address class="addres list">
             <ul class="address-list">
                 <li class="address-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="address-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a> </li>
@@ -41,32 +41,35 @@
         </section>
         <section class="qualities">
             <h2 class="qualities-title">Main qualities</h2>
-            <ul class="qualities-list">
+            <ul class="qualities-list list">
                 <li class="qualities-item">
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <h3 class="qualities-item-title">Strategy</h3>
+                    <p class="qualities-item-paragraph">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="qualities-item">
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="qualities-item-title">Punctuality</h3>
+                    <p class="qualities-item-paragraph">Bring the key message to the brand's audience for the best price
+                        within the shortest possible
                         time.</p>
                 </li>
                 <li class="qualities-item">
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <h3 class="qualities-item-title">Diligence</h3>
+                    <p class="qualities-item-paragraph">Research and confirm brands that present the strongest digital
+                        growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li class="qualities-item">
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="qualities-item-title">Technologies</h3>
+                    <p class="qualities-item-paragraph">Design practice focused on digital experiences. We bring forth a
+                        deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
         <section class="actions">
             <h2 class="actions-title">What are we doing</h2>
-            <ul class="actions-list">
+            <ul class="actions-list list">
                 <li class="actions-item"><img src="./images/computer-screen.jpg" alt="computer screen" width="360"
                         height="300" /></li>
                 <li class="actions-item"><img src="./images/telephone.jpg" alt="telephone" width="360" height="300" />
@@ -78,33 +81,34 @@
         </section>
         <section class="team">
             <h2 class="team-title">Our Team</h2>
-            <ul class="team-list">
+            <ul class="team-list list">
                 <li class="team-item">
                     <img src="./images/img-1.jpg" alt="Photo Mark Guerrero" width="264" />
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-item-title">Mark Guerrero</h3>
+                    <p class="team-item-paragraph">Product Designer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/img-2.jpg" alt="Photo Tom Ford" width="264" />
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-item-title">Tom Ford</h3>
+                    <p class="team-item-paragraph">Frontend Developer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/img-3.jpg" alt="Photo Camila Garcia" width="264" />
                     <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="team-item-paragraph">Marketing</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/img-4.jpg" alt="Photo Daniel Wilson" width="264" />
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-item-title">Daniel Wilson</h3>
+                    <p class="team-item-paragraph">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
-        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing &
+        <a href="./index.html" class="footer-logo link">Web<span class="studio">Studio</span></a>
+        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing
+            &
             growth
             solutions.</p>
 
