--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a href="./index.html" class="header-logo"><span>Web</span>Studio
+            <a href="./index.html" class="header-logo" class="link">Web<span class="studio">Studio</span>
             </a>
-            <ul class="header-list">
-                <li><a href="" class="header-item">Studio</a></li>
+            <ul class="header-list" class="list">
+                <li><a href="./index.html" class="header-item">Studio</a></li>
                 <li><a href="./portfolio.html" class="header-item">Portfolio</a></li>
                 <li><a href="" class="header-item">Contacts</a></li>
             </ul>
@@ -35,7 +35,8 @@
     </header>
     <main>
         <section class="menu">
-            <ul class="menu-navigation-list">
+            <h1>Menu</h1>
+            <ul class="menu-navigation-list  list">
                 <li class="menu-navigation-item"><button type="button" class="menu-navigation-btn">All</button></li>
                 <li class="menu-navigation-item"><button type="button" class="menu-navigation-btn">Web Site</button>
                 </li>
@@ -45,53 +46,51 @@
                 </li>
             </ul>
 
-        </section>
-        <section class="possibility">
-            <ul class="possibility-list">
-                <li class="possibility-item">
+            <ul class="menu-list list">
+                <li class="menu-item">
                     <img src="./images/img (5).jpg" alt="program-tabs" width="360" height="300">
                     <h2>Banking App Interface Concept</h2>
                     <p>Banking App Interface Concept</p>
                 </li>
-                <li class="possibility-item">
+                <li class="menu-item">
                     <img src="./images/img (6).jpg" alt="phone-reads-qr-code" width="360" height="300">
                     <h2>Cashless Payment</h2>
                     <p>Marketing</p>
                 </li>
-                <li class="possibility-item">
+                <li class="menu-item">
                     <img src="./images/img (7).jpg" alt="laptop-and-phone" width="360" height="300">
                     <h2>Meditation App</h2>
                     <p>App</p>
                 </li>
-                <li class="possibility-item">
+                <li class="menu-item">
                     <img src="./images/img (8).jpg" alt="phone-in-car" width="360" height="300">
                     <h2>Taxi Service</h2>
                     <p>Marketing</p>
                 </li>
-                <li class="possibility-item">
+                <li class="menu-item">
                     <img src="./images/img (9).jpg" alt="phone-screens" width="360" height="300">
                     <h2>Screen Illustrations</h2>
                     <p>Design</p>
                 </li>
-                <li class="possibility-item">
+                <li class="menu-item">
                     <img src="./images/img (10).jpg" alt="girl-with-phone" width="360" height="300">
                     <h2>Online Courses</h2>
                     <p>Marketing</p>
                 </li>
-                <li class="possibility-item">
+                <li class="menu-item">
                     <img src="./images/img (11).jpg" alt="instruction-make-everything-feel-easier" width="360"
                         height="300">
                     <h2>Instagram Stories Concept</h2>
                     <p>Design</p>
                 </li>
-                <li class="possibility-item">
+                <li class="menu-item">
                     <img src="./images/img (12).jpg" alt="girl-carries-fruit-and-vegetables-in-a-bag" width="360"
                         height="300">
                     <h2>Organic Food</h2>
                     <p>Web Site</p>
                 </li>
-                <li class="possibility-item">
-                    <img src="./images/img (13).jpg" alt="coffy-with-latte-art" width="360" height="300">
+                <li class="menu-item">
+                    <img src="./images/img (13).jpg" alt="cooffy-with-latte-art" width="360" height="300">
                     <h2>Fresh Coffee</h2>
                     <p>Web Site</p>
                 </li>
@@ -99,8 +98,9 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
-        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing &
+        <a href="./index.html" class="footer-logo" class="link">Web<span class="studio">Studio</span></a>
+        <p class=" footer-paragraph">Increase the flow of customers and sales for your business with digital marketing
+            &
             growth
             solutions.</p>
 
