--- a/portfolio.html
+++ b/portfolio.html
@@ -47,58 +47,58 @@
             </ul>
 
             <ul class="menu-list list">
-                <li class="menu-item">
+                <li class="menu-item link">
                     <img src="./images/img (5).jpg" alt="program-tabs" width="360" height="300">
-                    <h2>Banking App Interface Concept</h2>
-                    <p>Banking App Interface Concept</p>
+                    <h2 class="menu-item-paragraph">Banking App Interface Concept</h2>
+                    <p class="menu-item-title">Banking App Interface Concept</p>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item link">
                     <img src="./images/img (6).jpg" alt="phone-reads-qr-code" width="360" height="300">
-                    <h2>Cashless Payment</h2>
-                    <p>Marketing</p>
+                    <h2 class="menu-item-title">Cashless Payment</h2>
+                    <p class="menu-item-paragraph">Marketing</p>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item link">
                     <img src="./images/img (7).jpg" alt="laptop-and-phone" width="360" height="300">
-                    <h2>Meditation App</h2>
-                    <p>App</p>
+                    <h2 class="menu-item-title">Meditation App</h2>
+                    <p class="menu-item-paragraph">App</p>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item link">
                     <img src="./images/img (8).jpg" alt="phone-in-car" width="360" height="300">
-                    <h2>Taxi Service</h2>
-                    <p>Marketing</p>
+                    <h2 class="menu-item-title">Taxi Service</h2>
+                    <p class="menu-item-paragraph">Marketing</p>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item link">
                     <img src="./images/img (9).jpg" alt="phone-screens" width="360" height="300">
-                    <h2>Screen Illustrations</h2>
-                    <p>Design</p>
+                    <h2 class="menu-item-title">Screen Illustrations</h2>
+                    <p class="menu-item-paragraph">Design</p>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item link">
                     <img src="./images/img (10).jpg" alt="girl-with-phone" width="360" height="300">
-                    <h2>Online Courses</h2>
-                    <p>Marketing</p>
+                    <h2 class="menu-item-title">Online Courses</h2>
+                    <p class="menu-item-paragraph">Marketing</p>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item link">
                     <img src="./images/img (11).jpg" alt="instruction-make-everything-feel-easier" width="360"
                         height="300">
-                    <h2>Instagram Stories Concept</h2>
-                    <p>Design</p>
+                    <h2 class="menu-item-title">Instagram Stories Concept</h2>
+                    <p class="menu-item-paragraph">Design</p>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item link">
                     <img src="./images/img (12).jpg" alt="girl-carries-fruit-and-vegetables-in-a-bag" width="360"
                         height="300">
-                    <h2>Organic Food</h2>
-                    <p>Web Site</p>
+                    <h2 class="menu-item-title">Organic Food</h2>
+                    <p class="menu-item-paragraph">Web Site</p>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item link">
                     <img src="./images/img (13).jpg" alt="cooffy-with-latte-art" width="360" height="300">
-                    <h2>Fresh Coffee</h2>
-                    <p>Web Site</p>
+                    <h2 class="menu-item-title">Fresh Coffee</h2>
+                    <p class="menu-item-paragraph">Web Site</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-logo" class="link">Web<span class="studio">Studio</span></a>
+        <a href="./index.html" class="footer-logo link">Web<span class="studio">Studio</span></a>
         <p class=" footer-paragraph">Increase the flow of customers and sales for your business with digital marketing
             &
             growth
