--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             <a href="./index.html" class="header-logo link">Web<span class="studio">Studio</span>
             </a>
             <ul class="header-list list">
-                <li class="header-item link"><a href="./index.html">Studio</a></li>
-                <li class="header-item link"><a href="./portfolio.html">Portfolio</a></li>
-                <li class="header-item link"><a href="">Contacts</a></li>
+                <li><a href="./index.html" class="header-item link">Studio</a></li>
+                <li><a href="./portfolio.html" class="header-item link">Portfolio</a></li>
+                <li><a href="" class="header-item link">Contacts</a></li>
             </ul>
         </nav>
 
         <address class="addres list">
             <ul class="address-list">
-                <li class="address-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="address-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a> </li>
+                <li><a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a> </li>
             </ul>
         </address>
 
@@ -70,12 +70,12 @@
         <section class="actions">
             <h2 class="actions-title">What are we doing</h2>
             <ul class="actions-list list">
-                <li class="actions-item"><img src="./images/computer-screen.jpg" alt="computer screen" width="360"
-                        height="300" /></li>
-                <li class="actions-item"><img src="./images/telephone.jpg" alt="telephone" width="360" height="300" />
+                <li class="actions-item"><img src="./images/computer-screen.jpg" alt="computer screen" width="360">
                 </li>
-                <li class="actions-item"><img src="./images/telephone-laptop.jpg" alt="telephone and laptop" width="360"
-                        height="300" />
+                <li class="actions-item"><img src="./images/telephone.jpg" alt="telephone" width="360">
+                </li>
+                <li class="actions-item"><img src="./images/telephone-laptop.jpg" alt="telephone and laptop"
+                        width="360">
                 </li>
             </ul>
         </section>
@@ -83,22 +83,22 @@
             <h2 class="team-title">Our Team</h2>
             <ul class="team-list list">
                 <li class="team-item">
-                    <img src="./images/img-1.jpg" alt="Photo Mark Guerrero" width="264" />
+                    <img src="./images/img-1.jpg" alt="Photo Mark Guerrero" width="264">
                     <h3 class="team-item-title">Mark Guerrero</h3>
                     <p class="team-item-paragraph">Product Designer</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/img-2.jpg" alt="Photo Tom Ford" width="264" />
+                    <img src="./images/img-2.jpg" alt="Photo Tom Ford" width="264">
                     <h3 class="team-item-title">Tom Ford</h3>
                     <p class="team-item-paragraph">Frontend Developer</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/img-3.jpg" alt="Photo Camila Garcia" width="264" />
-                    <h3>Camila Garcia</h3>
+                    <img src="./images/img-3.jpg" alt="Photo Camila Garcia" width="264">
+                    <h3 class="team-item-title">Camila Garcia</h3>
                     <p class="team-item-paragraph">Marketing</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/img-4.jpg" alt="Photo Daniel Wilson" width="264" />
+                    <img src="./images/img-4.jpg" alt="Photo Daniel Wilson" width="264">
                     <h3 class="team-item-title">Daniel Wilson</h3>
                     <p class="team-item-paragraph">UI Designer</p>
                 </li>
