--- a/portfolio.html
+++ b/portfolio.html
@@ -16,19 +16,19 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a href="./index.html" class="header-logo" class="link">Web<span class="studio">Studio</span>
+            <a href="./index.html" class="header-logo link">Web<span class="studio">Studio</span>
             </a>
-            <ul class="header-list" class="list">
-                <li><a href="./index.html" class="header-item">Studio</a></li>
-                <li><a href="./portfolio.html" class="header-item">Portfolio</a></li>
-                <li><a href="" class="header-item">Contacts</a></li>
+            <ul class="header-list list">
+                <li><a href="./index.html" class="header-item link">Studio</a></li>
+                <li><a href="./portfolio.html" class="header-item link">Portfolio</a></li>
+                <li><a href="" class="header-item link">Contacts</a></li>
             </ul>
         </nav>
 
-        <address class="addres">
-            <ul class="address-list">
-                <li class="address-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="address-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a> </li>
+        <address class="addres list">
+            <ul class="address-list list">
+                <li><a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a> </li>
             </ul>
         </address>
 
@@ -47,52 +47,59 @@
             </ul>
 
             <ul class="menu-list list">
-                <li class="menu-item link">
-                    <img src="./images/img (5).jpg" alt="program-tabs" width="360" height="300">
-                    <h2 class="menu-item-paragraph">Banking App Interface Concept</h2>
-                    <p class="menu-item-title">Banking App Interface Concept</p>
+                <li class="menu-item link"><a href="">
+                        <img src="images/img-5.jpg" alt="program-tabs" width="360">
+                        <h2 class="menu-item-paragraph">Banking App Interface Concept</h2>
+                        <p class="menu-item-title">Banking App Interface Concept</p>
+                    </a>
                 </li>
-                <li class="menu-item link">
-                    <img src="./images/img (6).jpg" alt="phone-reads-qr-code" width="360" height="300">
-                    <h2 class="menu-item-title">Cashless Payment</h2>
-                    <p class="menu-item-paragraph">Marketing</p>
+                <li class="menu-item link"><a href="">
+                        <img src="./images/img-6.jpg" alt="phone-reads-qr-code" width="360">
+                        <h2 class="menu-item-title">Cashless Payment</h2>
+                        <p class="menu-item-paragraph">Marketing</p>
+                    </a>
                 </li>
-                <li class="menu-item link">
-                    <img src="./images/img (7).jpg" alt="laptop-and-phone" width="360" height="300">
-                    <h2 class="menu-item-title">Meditation App</h2>
-                    <p class="menu-item-paragraph">App</p>
+                <li class="menu-item link"><a href="">
+                        <img src="./images/img-7.jpg" alt="laptop-and-phone" width="360">
+                        <h2 class="menu-item-title">Meditation App</h2>
+                        <p class="menu-item-paragraph">App</p>
+                    </a>
                 </li>
-                <li class="menu-item link">
-                    <img src="./images/img (8).jpg" alt="phone-in-car" width="360" height="300">
-                    <h2 class="menu-item-title">Taxi Service</h2>
-                    <p class="menu-item-paragraph">Marketing</p>
+                <li class="menu-item link"><a href="">
+                        <img src="./images/img-8.jpg" alt="phone-in-car" width="360">
+                        <h2 class="menu-item-title">Taxi Service</h2>
+                        <p class="menu-item-paragraph">Marketing</p>
+                    </a>
                 </li>
-                <li class="menu-item link">
-                    <img src="./images/img (9).jpg" alt="phone-screens" width="360" height="300">
-                    <h2 class="menu-item-title">Screen Illustrations</h2>
-                    <p class="menu-item-paragraph">Design</p>
+                <li class="menu-item link"><a href="">
+                        <img src="./images/img-9.jpg" alt="phone-screens" width="360">
+                        <h2 class="menu-item-title">Screen Illustrations</h2>
+                        <p class="menu-item-paragraph">Design</p>
+                    </a>
                 </li>
-                <li class="menu-item link">
-                    <img src="./images/img (10).jpg" alt="girl-with-phone" width="360" height="300">
-                    <h2 class="menu-item-title">Online Courses</h2>
-                    <p class="menu-item-paragraph">Marketing</p>
+                <li class="menu-item link"><a href="">
+                        <img src="./images/img-10.jpg" alt="girl-with-phone" width="360">
+                        <h2 class="menu-item-title">Online Courses</h2>
+                        <p class="menu-item-paragraph">Marketing</p>
+                    </a>
                 </li>
-                <li class="menu-item link">
-                    <img src="./images/img (11).jpg" alt="instruction-make-everything-feel-easier" width="360"
-                        height="300">
-                    <h2 class="menu-item-title">Instagram Stories Concept</h2>
-                    <p class="menu-item-paragraph">Design</p>
+                <li class="menu-item link"><a href="">
+                        <img src="./images/img-11.jpg" alt="instruction-make-everything-feel-easier" width="360">
+                        <h2 class="menu-item-title">Instagram Stories Concept</h2>
+                        <p class="menu-item-paragraph">Design</p>
+                    </a>
                 </li>
-                <li class="menu-item link">
-                    <img src="./images/img (12).jpg" alt="girl-carries-fruit-and-vegetables-in-a-bag" width="360"
-                        height="300">
-                    <h2 class="menu-item-title">Organic Food</h2>
-                    <p class="menu-item-paragraph">Web Site</p>
+                <li class="menu-item link"><a href="">
+                        <img src="./images/img-12.jpg" alt="girl-carries-fruit-and-vegetables-in-a-bag" width="360">
+                        <h2 class="menu-item-title">Organic Food</h2>
+                        <p class="menu-item-paragraph">Web Site</p>
+                    </a>
                 </li>
-                <li class="menu-item link">
-                    <img src="./images/img (13).jpg" alt="cooffy-with-latte-art" width="360" height="300">
-                    <h2 class="menu-item-title">Fresh Coffee</h2>
-                    <p class="menu-item-paragraph">Web Site</p>
+                <li class="menu-item link"><a href="">
+                        <img src="./images/img-13.jpg" alt="cooffy-with-latte-art" width="360">
+                        <h2 class="menu-item-title">Fresh Coffee</h2>
+                        <p class="menu-item-paragraph">Web Site</p>
+                    </a>
                 </li>
             </ul>
         </section>
