goit-markup-hw-02(6)

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
 
-        <address class="addres list">
+        <address class="address">
             <ul class="address-list list">
                 <li><a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a> </li>
@@ -49,8 +49,8 @@
             <ul class="menu-list list">
                 <li class="menu-item link"><a href="">
                         <img src="images/img-5.jpg" alt="program-tabs" width="360">
-                        <h2 class="menu-item-paragraph">Banking App Interface Concept</h2>
-                        <p class="menu-item-title">Banking App Interface Concept</p>
+                        <h2 class="menu-item-title">Banking App Interface Concept</h2>
+                        <p class="menu-item-paragraph">App</p>
                     </a>
                 </li>
                 <li class="menu-item link"><a href="">
@@ -59,43 +59,43 @@
                         <p class="menu-item-paragraph">Marketing</p>
                     </a>
                 </li>
-                <li class="menu-item link"><a href="">
+                <li class="menu-item link"><a href="" class="link">
                         <img src="./images/img-7.jpg" alt="laptop-and-phone" width="360">
                         <h2 class="menu-item-title">Meditation App</h2>
                         <p class="menu-item-paragraph">App</p>
                     </a>
                 </li>
-                <li class="menu-item link"><a href="">
+                <li class="menu-item link"><a href="" class="link">
                         <img src="./images/img-8.jpg" alt="phone-in-car" width="360">
                         <h2 class="menu-item-title">Taxi Service</h2>
                         <p class="menu-item-paragraph">Marketing</p>
                     </a>
                 </li>
-                <li class="menu-item link"><a href="">
+                <li class="menu-item link"><a href="" class="link">
                         <img src="./images/img-9.jpg" alt="phone-screens" width="360">
                         <h2 class="menu-item-title">Screen Illustrations</h2>
                         <p class="menu-item-paragraph">Design</p>
                     </a>
                 </li>
-                <li class="menu-item link"><a href="">
+                <li class="menu-item link"><a href="" class="link">
                         <img src="./images/img-10.jpg" alt="girl-with-phone" width="360">
                         <h2 class="menu-item-title">Online Courses</h2>
                         <p class="menu-item-paragraph">Marketing</p>
                     </a>
                 </li>
-                <li class="menu-item link"><a href="">
+                <li class="menu-item link"><a href="" class="link">
                         <img src="./images/img-11.jpg" alt="instruction-make-everything-feel-easier" width="360">
                         <h2 class="menu-item-title">Instagram Stories Concept</h2>
                         <p class="menu-item-paragraph">Design</p>
                     </a>
                 </li>
-                <li class="menu-item link"><a href="">
+                <li class="menu-item link"><a href="" class="link">
                         <img src="./images/img-12.jpg" alt="girl-carries-fruit-and-vegetables-in-a-bag" width="360">
                         <h2 class="menu-item-title">Organic Food</h2>
                         <p class="menu-item-paragraph">Web Site</p>
                     </a>
                 </li>
-                <li class="menu-item link"><a href="">
+                <li class="menu-item link"><a href="" class="link">
                         <img src="./images/img-13.jpg" alt="cooffy-with-latte-art" width="360">
                         <h2 class="menu-item-title">Fresh Coffee</h2>
                         <p class="menu-item-paragraph">Web Site</p>
