--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </ul>
         </nav>
 
-        <address class="addres list">
-            <ul class="address-list">
+        <address class="address">
+            <ul class="address-list list">
                 <li><a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a> </li>
             </ul>
