oit-markup-hw-02(7)

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,13 @@
             </ul>
 
             <ul class="menu-list list">
-                <li class="menu-item link"><a href="">
-                        <img src="images/img-5.jpg" alt="program-tabs" width="360">
+                <li class="menu-item link"><a href="" class="link">
+                        <img src="./images/img-5.jpg" alt="program-tabs" width="360">
                         <h2 class="menu-item-title">Banking App Interface Concept</h2>
                         <p class="menu-item-paragraph">App</p>
                     </a>
                 </li>
-                <li class="menu-item link"><a href="">
+                <li class="menu-item link"><a href="" class="link">
                         <img src="./images/img-6.jpg" alt="phone-reads-qr-code" width="360">
                         <h2 class="menu-item-title">Cashless Payment</h2>
                         <p class="menu-item-paragraph">Marketing</p>
